--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="X-UA-Compatible">
+<html lang="uk">
 <head>
 <meta charset="UTF-8">
 
@@ -8,15 +8,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,400&display=swap" rel="stylesheet">  
-<link rel="stylesheet" href="styles/reset.css">
-<link rel="stylesheet" href="styles/style.css">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
 <title>Рецепти</title>
 </head>
 
 <body> 
 
 <header>
-	<div class=" title">
+	<div class="title">
 		<h1>Записник рецептів</h1>
 		<h2>збірка рослинних страв, що складаються лише з 4 інгредієнтів</h2>
 	</div>
@@ -25,14 +25,15 @@
 <main>
 	<div class="buttons">
 	<ol>
-		<li><a href=""class="button__link">сніданки </a> </li>
-		<li><a href=""class="button__link">закуски </a> </li>
-		<li><a href=""class="button__link">основні страви</a></li>
-		<li><a href=""class="button__link">десерти</a></li>
+		<li><a href="" class="button__link">сніданки </a> </li>
+		<li><a href="" class="button__link">закуски </a> </li>
+		<li><a href="" class="button__link">основні страви</a></li>
+		<li><a href="" class="button__link">десерти</a></li>
 	</ol>
 	</div>
 </main>   
 </body>
 
 </html>
+
 
